fixing some layout issues

--- a/ttp-fe/src/App.scss
+++ b/ttp-fe/src/App.scss
@@ -10,5 +10,4 @@ body {
 
 #root {
   height: 100%;
-  display: flex;
 }
