--- a/ttp-fe/src/stylesheets/Transactions.scss
+++ b/ttp-fe/src/stylesheets/Transactions.scss
@@ -4,6 +4,7 @@
   box-shadow: -5px 0px 14px 5px #989cc71f;
   width: 100%;
   padding: 28px;
+  position: fixed;
 
 
   h1 {
